--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     },
     "homepage": "https://github.com/TurboWarp/scratch-l10n#readme",
     "dependencies": {
+        "react-intl": "^2.8.0"
+    },
+    "devDependencies": {
         "@babel/cli": "^7.1.2",
         "@babel/core": "^7.1.2",
         "babel-plugin-react-intl": "^3.0.1",
-        "react-intl": "^2.8.0",
-        "transifex": "1.6.6"
-    },
-    "devDependencies": {
+        "transifex": "1.6.6",
         "@babel/node": "7.2.2",
         "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
         "@babel/plugin-syntax-dynamic-import": "^7.0.0",
