--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@turbowarp/scratch-l10n",
-    "version": "3.11.0-1",
+    "version": "3.11.0",
     "description": "Localization for TurboWarp",
     "main": "./dist/l10n.js",
     "browser": "./src/index.js",
