--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "devDependencies": {
         "@babel/cli": "^7.1.2",
         "@babel/core": "^7.1.2",
-        "transifex": "1.6.6",
         "@babel/node": "7.2.2",
         "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
         "@babel/plugin-syntax-dynamic-import": "^7.0.0",
@@ -56,8 +55,10 @@
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.0.0",
         "async": "2.6.1",
+        "async-limiter": "^2.0.0",
         "babel-eslint": "^10.0.1",
         "babel-loader": "8.0.5",
+        "dotenv": "^9.0.2",
         "eslint": "^5.0.1",
         "eslint-config-scratch": "^5.0.0",
         "eslint-plugin-import": "^2.8.0",
@@ -74,6 +75,7 @@
         "p-limit": "2.1.0",
         "p-queue": "3.0.0",
         "rimraf": "^2.6.2",
+        "transifex": "1.6.6",
         "webpack": "^4.6.0",
         "webpack-cli": "^3.1.2"
     }
