Update license to GPL
TurboWarp/scratch-gui is GPL
These translations are derivatives of that repository
Therefore, these should be GPL as well

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "url": "git+https://github.com/TurboWarp/scratch-l10n.git"
     },
     "author": "Thomas Weber",
-    "license": "BSD-3-Clause",
+    "license": "GPL-3.0",
     "bugs": {
         "url": "https://github.com/TurboWarp/scratch-l10n/issues"
     },
