--- a/package.json
+++ b/package.json
@@ -53,15 +53,17 @@
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.0.0",
         "async": "2.6.1",
+        "async-limiter": "^2.0.0",
         "babel-loader": "8.0.5",
+        "dotenv": "^16.0.1",
         "eslint": "8.17.0",
         "eslint-config-scratch": "8.0.0",
         "eslint-plugin-import": "2.26.0",
         "eslint-plugin-react": "^7.5.1",
-        "format-message-cli": "6.2.1",
+        "format-message-cli": "^6.2.4",
         "format-message-parse": "6.2.0",
         "glob": "7.1.3",
-        "jshint": "2.9.7",
+        "jshint": "^2.13.4",
         "json": "^9.0.6",
         "jsonlint": "1.6.3",
         "lodash.defaultsdeep": "4.6.1",
