--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "format-message-cli": "^6.2.4",
         "format-message-parse": "6.2.0",
         "glob": "7.1.3",
+        "js-yaml": "^4.1.0",
         "jshint": "^2.13.4",
         "json": "^9.0.6",
         "jsonlint": "1.6.3",
