--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,11 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - name: Install Node.js
+      uses: actions/setup-node@v4
       with:
-        node-version: 14.x
+        node-version: 16.x
     - name: Install dependencies
       run: npm ci
     - name: Validate
